[gd_scene load_steps=21 format=3 uid="uid://h7ki5opejbw4"]

[ext_resource type="Script" path="res://Cats/Finisher/Finisher.gd" id="1_grg67"]
[ext_resource type="Texture2D" uid="uid://b2c5u0wqcida6" path="res://Cats/Finisher/finisher.png" id="2_kwvor"]
[ext_resource type="PackedScene" uid="uid://rf06mats4d52" path="res://UI/Bubbles/BulbPopup.tscn" id="3_ivbio"]
[ext_resource type="PackedScene" uid="uid://b7mab3dwu7ykn" path="res://UI/Bubbles/TextPopup.tscn" id="4_ncxry"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_r5xlv"]
bounce = 0.4

[sub_resource type="CircleShape2D" id="CircleShape2D_1uj66"]

[sub_resource type="AtlasTexture" id="AtlasTexture_28gti"]
atlas = ExtResource("2_kwvor")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqq3c"]
atlas = ExtResource("2_kwvor")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7esh6"]
atlas = ExtResource("2_kwvor")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdbwk"]
atlas = ExtResource("2_kwvor")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dsi2"]
atlas = ExtResource("2_kwvor")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r13i"]
atlas = ExtResource("2_kwvor")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1dt7"]
atlas = ExtResource("2_kwvor")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auo6y"]
atlas = ExtResource("2_kwvor")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf1p5"]
atlas = ExtResource("2_kwvor")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffeks"]
atlas = ExtResource("2_kwvor")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkbqe"]
atlas = ExtResource("2_kwvor")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpejc"]
atlas = ExtResource("2_kwvor")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lywsc"]
atlas = ExtResource("2_kwvor")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4gcbd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_28gti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqq3c")
}],
"loop": false,
"name": &"close_eyes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7esh6")
}],
"loop": false,
"name": &"eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdbwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dsi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r13i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1dt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auo6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf1p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffeks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkbqe")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpejc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lywsc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Finisher" type="RigidBody2D" node_paths=PackedStringArray("bulb_popup", "text_popup", "animated_sprite")]
physics_material_override = SubResource("PhysicsMaterial_r5xlv")
max_contacts_reported = 3
contact_monitor = true
lock_rotation = true
script = ExtResource("1_grg67")
bulb_popup = NodePath("BulbPopup")
text_popup = NodePath("TextPopup")
animated_sprite = NodePath("AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.165)
shape = SubResource("CircleShape2D_1uj66")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4gcbd")
animation = &"eat"
autoplay = "idle"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(11, 7)
target_position = Vector2(16, 0)

[node name="BulbPopup" parent="." instance=ExtResource("3_ivbio")]

[node name="TextPopup" parent="." instance=ExtResource("4_ncxry")]
offset_left = -32.0
offset_top = -32.0
offset_right = 5.0
offset_bottom = -2.0
pivot_offset = Vector2(30.405, 29.79)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
